--- a/index.html
+++ b/index.html
@@ -965,7 +965,7 @@ margin-left: 6rem;
             <img src="https://i.ibb.co/PmrppvT/member.JPG" alt="check"> 
         </div>
         <div class="column">
-            <img src="https://i.ibb.co/6H3B8wb/member.JPG" alt="check"> 
+            <img src="https://i.ibb.co/PmrppvT/member.JPG" alt="check"> 
         </div>
         <div class="column" id="3r">
             <img src="https://i.ibb.co/PmrppvT/member.JPG" alt="check"> 
