--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@ nav ul li a:hover::after{
     flex-basis: 35%;
 }
 .about-col-1 img{
-    width: 100%;
-    border-radius: 65rem;
-     
+    width: 22rem;
+    border-radius: 2rem;
+     margin-left: 2rem;
     -webkit-transition-duration: 0.3s;
     transition-duration: 0.5s;
     -webkit-transition-property:box-shadow, transform;
@@ -260,11 +260,11 @@ transform: translateY(-10px);
     font-size: 4rem;
 }
 #plants img{
-    width: 27rem;
-    padding: 40px;
+    width: 100%;
+    padding: 10px;
     border-radius: 10px;
     margin-bottom: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgb(251, 251, 255);
     -webkit-transition-duration: 0.3s;
     transition-duration: 0.3s;
     -webkit-transition-property:box-shadow, transform;
@@ -325,10 +325,10 @@ font-size: 4rem;
     clear: both;
 }
 .column img{
-    width: 26rem;
+    width: 100%;
     padding: 5px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 2px rgb(3, 169, 247);
     -webkit-transition-duration: 0.3s;
     transition-duration: 0.3s;
     -webkit-transition-property:box-shadow, transform;
@@ -548,7 +548,6 @@ nav #icon{
 @media only screen and (max-width:768px)
 {
 
-
     #header p{
     color: var(--secondary-color);
     position: relative;
@@ -591,7 +590,7 @@ nav ul .bx{
     background-color: red;
     cursor: pointer;
 }
- 
+
  #menu1 {
     display:block;
     font-size: 3rem; 
@@ -665,7 +664,11 @@ margin-left: 6rem;
     font-size: 40px;
     margin: 3rem;
     
+    #plants img{
+        margin-left: 2rem;
+    }
 }
+
 #plants p .bx-link-external{
     margin: 0 2rem;
     display: inline;
@@ -961,7 +964,7 @@ margin-left: 6rem;
             <img src="https://i.ibb.co/PmrppvT/member.JPG" alt="check"> 
         </div>
         <div class="column">
-            <img src="https://i.ibb.co/PmrppvT/member.JPG" alt="check"> 
+            <img src="https://i.ibb.co/6H3B8wb/member.JPG" alt="check"> 
         </div>
         <div class="column" id="3r">
             <img src="https://i.ibb.co/PmrppvT/member.JPG" alt="check"> 
@@ -1055,7 +1058,7 @@ margin-left: 6rem;
                 <span id="msg"></span>
             </div>
         </div>
-        <iframe   class="map"    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.819085685871!2d36.81212617404561!3d-1.2823420356198922!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f11ff543317eb%3A0xd0a8baccec8f7ad1!2sLuther%20plaza!5e0!3m2!1sen!2ske!4v1719478835701!5m2!1sen!2ske" width="400"; height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe   class="map"    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.819085685871!2d36.81212617404561!3d-1.2823420356198922!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f11ff543317eb%3A0xd0a8baccec8f7ad1!2sLuther%20plaza!5e0!3m2!1sen!2ske!4v1719478835701!5m2!1sen!2ske" width="100%"; height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="copyright"> © ocfn2024</div>
 </div>
