--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 body{
     background:var(--primary-color);
     color: var(--secondary-color);
-    
+    width: 100%;
 }
 html{
     scroll-behavior:smooth;
@@ -52,7 +52,8 @@ html{
     color: rgb(252, 4, 4);
 }
 .container{
-    padding: 10px 10px;  
+     width: 470px;  
+
 }
 p,h1{
     color: var(--secondary-color);
@@ -556,7 +557,7 @@ nav #icon{
     position: relative;
     margin-top: 5rem;
     margin-left: 1rem;
-    font-size: 1.3rem;
+    font-size: 3rem;
 
    }
    
