--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@ nav ul li a:hover::after{
 #about{
     padding: 80px 0;
     color: var(--secondary-color);
+    width:100%;
 }
 .row{
     display: flex;
@@ -132,7 +133,7 @@ nav ul li a:hover::after{
     flex-basis: 35%;
 }
 .about-col-1 img{
-    width: 22rem;
+    width: 100%;
     border-radius: 2rem;
      
     -webkit-transition-duration: 0.3s;
