--- a/index.html
+++ b/index.html
@@ -732,7 +732,6 @@ margin-left: 6rem;
 #why{
     margin-top: -55rem;
 }
-
 }
 </style>
 
@@ -753,7 +752,7 @@ margin-left: 6rem;
                 <div class="menu">
                     </div>
             <i class='bx bx-bible' id="menu1"></i>
-             <i class='bx bxs-sun' id="icon" class='icon' ></i>
+             <i class='bx bxs-sun' id="icon"  ></i>
         </nav>
         <h1>OROMOO <mark>CHRISTIAN</mark>  FELLOWSHIP NAIROBI</h1>
         </div>
@@ -902,7 +901,7 @@ margin-left: 6rem;
     </div>
 
 </div>
-<!----our church plants---->
+<!---- our church plants ---->
 <div class="container">
 <div id="plants">
 <h1>OCFN Church plants</h1>
@@ -960,7 +959,7 @@ margin-left: 6rem;
 <button onclick="myFunction3()" id="myBtn2"> more </button>
 </div>    
 </div>
-<!----OUR GALLERY-->
+<!---- OUR GALLERY ---->
 <div class="container">
 <div id="gallery">
     <h1>OUR GALLERY</h1>
@@ -1029,7 +1028,7 @@ margin-left: 6rem;
 </div>
     </div>
 </div>
-<!-----contact -->
+<!--- contact --->
 <div class="container">
 <div id="contact">
     
