--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@ nav ul .bx{
 .about-col-1 img{
     
     border-radius: 25rem;
-    width: 22rem;
+    width: 100%;
 }
 .about-col-2{
     font-size: 14px;
@@ -704,8 +704,9 @@ margin-left: 6rem;
     }
     .column{
         width:100%;
-        margin:1rem 0;
-        height: 15rem;
+        margin:2rem 0;
+        height: 20rem;
+        padding: 0  3rem;
     } 
     
 
@@ -730,7 +731,7 @@ margin-left: 6rem;
     font-size: 2rem;
 } 
 #why{
-    margin-top: -55rem;
+    margin-top: -50rem;
 }
 
 }
