--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@ nav ul li a:hover::after{
     transition-property: box-shadow,transform;
 }
 .about-col-1 img:hover{
-    box-shadow: 0px 2rem 2rem 2rem rgb(255, 230, 9);
+    box-shadow: 2rem 2rem 2rem 2rem hsl(59, 100%, 50%);
    -webkit-transform: scale(1.1);
-   transform: scale(1.1);
+   transform: scale(0.9);
 }
 .about-col-2 {
    flex-basis: 1rem;
