--- a/index.html
+++ b/index.html
@@ -562,7 +562,13 @@ nav #icon{
     font-size: 3rem;
 
    }
-   
+   .container{
+    width: 100%;
+    margin: 1px -10px;
+   }
+   body{
+    position:sticky;
+   }
   #menu1 {
     display: none;
   }
