--- a/index.html
+++ b/index.html
@@ -662,6 +662,7 @@ margin-left: 6rem;
 }
     #plants img{
         margin-left: 2rem;
+        width:100%;
     }
 
 
@@ -684,7 +685,7 @@ margin-left: 6rem;
     }
    
     .plants{
-        width: 30rem;
+        width:100%;
         margin: 1rem 0;
         width: 15rem;
     }
@@ -694,6 +695,7 @@ margin-left: 6rem;
     }
     .column{
         width:100%;
+        height:100%;
     } 
     
 
