--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@ margin-left: 6rem;
     }
     .column{
         width:100%;
-        height:100%;
+        transform:scale(0.5);
     } 
     
 
