--- a/index.html
+++ b/index.html
@@ -694,8 +694,9 @@ margin-left: 6rem;
         width:100%;
     }
     .column{
-        width:100%;
-        transform:scale(0.5);
+height: auto; 
+max-width: auto;
+        
     } 
     
 
