--- a/index.html
+++ b/index.html
@@ -553,7 +553,12 @@ nav #icon{
 /*------------css for small screen-------*/
 @media only screen and (max-width:768px)
 {
-
+body {
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+}
+    
     #header p{
     color: var(--secondary-color);
     position: fixed;
@@ -693,7 +698,7 @@ margin-left: 6rem;
         width:100%;
     }
     .column{
-        width:120%;
+        width:105%;
         display: inline;
     } 
     
