--- a/index.html
+++ b/index.html
@@ -552,10 +552,10 @@ nav #icon{
 
 
 /*------------css for small screen-------*/
-@media only screen and (width:769px)
+@media only screen and (max-width:769px)
 {
 body {
-    width: 100%;
+    min-width:769px;
     height: 100vh;
     margin: 0;
 }
