--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ nav #icon{
 @media only screen and (max-width:769px)
 {
 body {
-    min-width:100%;
+    min-width:320px;
     height: 100vh;
     margin: 0;
 }
