--- a/index.html
+++ b/index.html
@@ -554,9 +554,8 @@ nav #icon{
 /*------------css for small screen-------*/
 @media only screen and (max-width:769px)
 {
-body {
-    min-width:501px;
-    height: 100vh;
+ html, body {
+    min-width:100%;
     margin: 0;
 }
     
