--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ nav #icon{
 @media only screen and (max-width:769px)
 {
  html, body {
-    min-width:100%;
+    min-height:100%;
     margin: 0;
 }
     
