--- a/index.html
+++ b/index.html
@@ -552,10 +552,10 @@ nav #icon{
 
 
 /*------------css for small screen-------*/
-@media only screen and (max-width:769px)
+@media only screen and (max-width:100%)
 {
  html, body {
-    min-height:100%;
+    min-width:100%;
     margin: 0;
 }
     
