--- a/index.html
+++ b/index.html
@@ -552,10 +552,10 @@ nav #icon{
 
 
 /*------------css for small screen-------*/
-@media only screen and (max-width:100%)
+@media only screen and (max-width:769px)
 {
- html, body {
-    min-width:100%;
+ body {
+    min-width:769px;
     margin: 0;
 }
     
