--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ nav #icon{
 @media only screen and (width:769px)
 {
  body {
-    min-width:360px;
+    min-width:100%;
     margin: 0;
 }
     
@@ -571,12 +571,6 @@ nav #icon{
     width: 100%;
     
    }
-   body{
-    width: 100%;
-   }
-  
-
-
     nav ul 
     {
         background: #141213;
