--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ nav #icon{
 
 
 /*------------css for small screen-------*/
-@media only screen and (max-width:769px)
+@media only screen and (width:769px)
 {
  body {
     min-width:1171px;
