--- a/index.html
+++ b/index.html
@@ -552,10 +552,11 @@ nav #icon{
 
 
 /*------------css for small screen-------*/
-@media only screen and (width:769px)
+@media only screen and (min-width:769px)
 {
- body {
-    min-width:1171px;
+body {
+   max-width: 100%;
+    height: 100vh;
     margin: 0;
 }
     
