--- a/index.html
+++ b/index.html
@@ -554,12 +554,10 @@ nav #icon{
 /*------------css for small screen-------*/
 @media only screen and (min-width:769px)
 {
-body {
-   max-width: 100%;
-    height: 100vh;
-    margin: 0;
-}
-    
+
+    body{
+        width:100%;
+    }
     #header p{
     color: var(--secondary-color);
     position: fixed;
