--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -552,12 +551,9 @@ nav #icon{
 
 
 /*------------css for small screen-------*/
-@media only screen and (min-width:769px)
+@media only screen and (max-width:768px)
 {
 
-    body{
-        width:100%;
-    }
     #header p{
     color: var(--secondary-color);
     position: fixed;
@@ -570,6 +566,12 @@ nav #icon{
     width: 100%;
     
    }
+   body{
+    width: 100%;
+   }
+  
+
+
     nav ul 
     {
         background: #141213;
@@ -691,7 +693,7 @@ margin-left: 6rem;
         width:100%;
     }
     .column{
-        width:105%;
+        width:100%;
         display: inline;
     } 
     
