--- a/index.html
+++ b/index.html
@@ -567,7 +567,10 @@ nav #icon{
     
    }
    body{
-   min-width:1171px;
+   min-width:auto;
+   min-height:100vh;
+   margin: 0; 
+   padding: 0;
    }
   
 
