--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ nav #icon{
 
 
 /*------------css for small screen-------*/
-@media only screen and (max-width:auto)
+@media only screen and (max-width:769)
 {
 
     #header p{
@@ -563,8 +563,8 @@ nav #icon{
 
    }
    .container{
-    width: 100%;
-    
+   min-width:auto;
+   min-height:100vh;
    }
    body{
    min-width:auto;
@@ -572,9 +572,7 @@ nav #icon{
    margin: 0; 
    padding: 0;
    }
-  
-
-
+    
     nav ul 
     {
         background: #141213;
