--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ nav #icon{
 
 
 /*------------css for small screen-------*/
-@media only screen and (max-width:769)
+@media only screen and (max-width:769px)
 {
 
     #header p{
