--- a/index.html
+++ b/index.html
@@ -563,8 +563,7 @@ nav #icon{
 
    }
    .container{
-   min-width:auto;
-   min-height:100vh;
+   min-width:100%;
    }
    body{
    min-width:auto;
